# TransportNoveltyDistance

./: .gitignore  README.md  gcn.py  gcn_fine.pt  mattergen_eval.py  model_eval.py  pyproject.toml  toy.py  utils.py  utils_new.py  was_utils.py  wasserstein_novelty.py  wasserstein_scorer.py  wasserstein_scorer_models.py  wasserstein_scorer_train_val.py  wasserstein_scorer_wbm_data.py  wasserstein_scorer_wbm_substitute.py  wbm_exp.py
checkpoints/: egnn_invariant_mp20.pt  gcn_finenew.pt  gcn_mp20_final.pt
data/: README.md
experiments/: mattergen_eval.py  model_eval.py  toy.py  wbm_exp.py
scripts/: download_chemeleon2.py  download_mp20.py  download_wbm_data.py  download_xtalmet_models.py  split_mp20_oxides.py  train_mp20.py
src/TNovD/: TransportNoveltyDistance.py  __init__.py  gcn.py  utils.py
src/matscinovelty/: __init__.py  gcn.py  utils.py  wasserstein_novelty.py
tests/: test_energy_scorer.py  test_smoke_train.py
