[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matscinovelty"
version = "0.1.0"
description = "MatSciNovelty: OT-based novelty scoring using GNN encoders for materials discovery."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Paul Hagemann"},
    {name = "Simon Müller"},
    {name = "Philipp Benner"},
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "pymatgen>=2023.0.0",
    "pandas>=1.5",
    "numpy>=1.21",
    "matplotlib>=3.6",
    "pot>=0.9.0",
]
keywords = ["materials", "gnn", "novelty", "crystal", "ot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1.5",
]
train = [
    "accelerate>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
